<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameDetailsActivity">

    <TextView
        android:id="@+id/game_title"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10sp"
        android:elevation="20dp"
        android:background="@android:color/white"/>

    <ImageView
        android:id="@+id/game_pic"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_title"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:elevation="10dp"
        android:background="@android:color/white"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_pic"
        android:layout_above="@id/game_button">

        <TextView
            android:id="@+id/description_content"
            android:text="@string/description_text_goes_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/game_button"
            android:layout_below="@id/game_title"
            android:textSize="15sp"
            android:lineSpacingExtra="5sp"
            android:paddingTop="20sp"
            android:paddingRight="10sp"
            android:paddingBottom="20sp"
            android:paddingLeft="20sp" />

    </ScrollView>

    <Button
        android:id="@+id/game_button"
        android:text="@string/button_label"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"/>

</RelativeLayout>